2004-01-08 01:24  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSActionCell.m (-setObjectValue:): Change the argument type
	to id from 'NSString *'.

2004-01-08 00:47  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac: Fail with a verbose error message if libjpeg or
	libpng can't be found. Add --disable-jpeg/--disable-png options that
	override this.
	* configure: Regenerate.

	* Source/GNUmakefile: Add NSBitmapImageRep+JPEG.m,
	NSBitmapImageRep+PNG.m, and NSBitmapImageRep+PNM.m .

	* Source/NSBitmapImageRep.m (+canInitWithData:) Check if one of the
	new loaders can handle the data.
	(+imageUnfilteredFileTypes): Include the types from the new loaders.
	(+imageRepsWithData:, -initWithData:): Use the new loaders to load
	images.

	* Source/NSBitmapImageRep+JPEG.m, Source/NSBitmapImageRep+JPEG.h,
	Source/NSBitmapImageRep+PNG.m, Source/NSBitmapImageRep+PNG.h,
	Source/NSBitmapImageRep+PNM.m, Source/NSBitmapImageRep+PNM.h:
	New files with image loaders for JPEG, PNG, and PNM.

2003-01-07  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSHbox.h:
	* Headers/Additions/GNUstepGUI/GSVbox.h:
	Cleaned up to remove compiler warnings.
	* Source/NSDataLinkPanel.m: Added include of GSGuiPrivate.h to
	remove compiler warning.
	* Source/NSPrintInfo.m: Removed unused global paperSizes.
	* Source/NSScroller.m: (-trackKnob:) Initialise presentEvent.

2004-01-06 23:39  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/NSSpellServer.m: Documentation.
	* Headers/AppKit/NSSpellServer.h: Documentation.
	
2004-01-06 21:58  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/NSAffineTransform.m: More documentation.
	
2004-01-07 02:51  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSSplitView.m (-mouseDown:): Use an NSDebugLLog when we get
	an event in a subview area instead of an NSLog.

2004-01-04 02:32  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/NSApplication.m: Documentation.