@@ -319,16 +319,20 @@ static Class controlClass;
   [aCoder encodeValueOfObjCType: @encode(int) at: &_tag];
   [aCoder encodeConditionalObject: _target];
   [aCoder encodeValueOfObjCType: @encode(SEL) at: &_action];
+  // This is only encoded for backward compatibility and wont be decoded.
   [aCoder encodeConditionalObject: _control_view];
 }
 
 - (id) initWithCoder: (NSCoder*)aDecoder
 {
-  [super initWithCoder: aDecoder];
+  id dummy;
+
+  self = [super initWithCoder: aDecoder];
   [aDecoder decodeValueOfObjCType: @encode(int) at: &_tag];
   _target = [aDecoder decodeObject];
   [aDecoder decodeValueOfObjCType: @encode(SEL) at: &_action];
-  _control_view = [aDecoder decodeObject];
+  // Don't decode _control_view, as this may no longe be valid.
+  dummy = [aDecoder decodeObject];
   return self;
 }
 
